# multiplex

./: .dockerignore  .gitignore  .template.env  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  docker-compose-dev.yml  rustfmt.toml
.github/workflows/: build-container.yml
example_exports/: pluralkit.json  tupperbox.json
src/: event_handler.rs  main.rs  models.rs  pluralkit.rs  tupperbox.rs  utils.rs
src/commands/: admin.rs  autocomplete.rs  collective.rs  delete.rs  edit.rs  export.rs  import.rs  info.rs  mate.rs  misc.rs  mod.rs  proxy.rs  settings.rs  stats.rs  switch_log.rs  switch_logs.rs
src/events/: mod.rs  on_edit.rs  on_message.rs  on_reaction.rs  on_text_command.rs
src/utils/: channels.rs  collectives.rs  guild_settings.rs  guilds.rs  mates.rs  messages.rs  misc.rs  mod.rs  user_settings.rs
