[package]
name = "multiplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dotenvy = "0.15.7"
mongodb = "2.4.0"
once_cell = "1.17.1"
orderless = "0.1.5"
poise = "0.5.2"
serde = "1.0.159"
serde_json = "1.0.95"
strsim = "0.10.0"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
