[package]
name = "multiplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
axum = "0.6.18"
chrono = "0.4.26"
dotenvy = "0.15.7"
mime2ext = "0.1.52"
mongodb = { version = "2.4.0", features = ["bson-chrono-0_4"] }
once_cell = "1.17.1"
orderless = "0.1.5"
poise = { git = "https://github.com/serenity-rs/poise", rev = "b1d6bf643e877b5d689207d275a3b75363b0784" }
proc-macro2 = "1.0.67"
rand = "0.8.5"
rust-s3 = "0.33.0"
secrecy = "0.8.0"
serde = "1.0.159"
serde_json = "1.0.95"
strsim = "0.10.0"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
unicode-segmentation = "1.10.1"
urlencoding = "2.1.2"
